# parkinson-wearable-digital-biomarkers

./: .gitignore  AGENTS.md  CODEX_GOAL.md  MODEL_CARD.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: baseline.yaml
docs/: daphnet_real_data_report.md
results/: benchmark_report.md
scripts/: make_figures.py  prepare_daphnet.py  prepare_data.py  run_baselines.py  smoke_test.py
src/parkinson_wearable_biomarkers/: __init__.py  calibration.py  data.py  evaluate.py  features.py  models.py  preprocessing.py  validation.py
tests/: test_calibration.py  test_data.py  test_evaluate.py  test_features.py  test_import.py  test_models.py  test_prepare_daphnet.py  test_preprocessing.py  test_scripts.py  test_smoke.py  test_validation.py
